changed background and added some bugs to fix

--- a/public/base.css
+++ b/public/base.css
@@ -40,7 +40,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #df3535;
+    /* background-color: red; */
     font-size: 3rem;
     color: rgb(17, 199, 216);
     box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
