--- a/public/base.css
+++ b/public/base.css
@@ -30,10 +30,10 @@ video{
     display: grid;
     gap: 1rem;
     grid-template-areas: 
-        'a  b  c  d'
+        'a  b     d'
         'l  r  r  e'
         'k  r  r  f'
-        'j  i  h  g';
+        'j  i     g';
     
     grid-template-rows: repeat(4, 25%);
     grid-template-columns: 240px auto auto 240px;
